fixed text padding on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2131,9 +2131,6 @@ progress {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
   }
-  .p-5{
-    padding: 1rem !important;
-  }
 }
 @media (max-width: 767.98px) {
   .table-responsive-md {
@@ -11394,4 +11391,21 @@ hr {
   background-position: 50%;
   box-sizing: border-box;
   background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+@media (max-width: 575.98px) {
+  .table-responsive-sm {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+  .p-5{
+    padding: 1.5rem !important;
+  }
+  .px-5 {
+    padding-right: 1rem !important;
+    padding-left: 1rem !important;
+  }
+  .gx-5 {
+    --bs-gutter-x: 1rem;
+  }
 }
